--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
             font-family: 'Arial', sans-serif;
             background: #000;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
 
         .video-container {
-            width: 1920px;
-            height: 1080px;
+            width: 100vw;
+            height: 100vh;
+            max-width: 1920px;
+            max-height: 1080px;
             position: relative;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             overflow: hidden;
@@ -48,7 +54,7 @@
         }
 
         .hook-amount {
-            font-size: 180px;
+            font-size: 12vw;
             font-weight: 900;
             color: #fff;
             text-shadow: 0 10px 30px rgba(0,0,0,0.5);
@@ -56,13 +62,14 @@
         }
 
         .hook-text {
-            font-size: 60px;
+            font-size: 3.5vw;
             color: #fff;
-            margin-top: 40px;
+            margin-top: 2vh;
             text-align: center;
-            max-width: 1400px;
+            max-width: 90%;
             line-height: 1.3;
             animation: fadeIn 1.5s ease-out;
+            padding: 0 2vw;
         }
 
         /* Scène 2 - Problème */
@@ -71,24 +78,25 @@
         }
 
         .problem-title {
-            font-size: 80px;
+            font-size: 5vw;
             color: #fff;
-            margin-bottom: 60px;
+            margin-bottom: 4vh;
             font-weight: 700;
         }
 
         .problem-list {
             display: flex;
             flex-direction: column;
-            gap: 40px;
+            gap: 3vh;
+            padding: 0 5vw;
         }
 
         .problem-item {
-            font-size: 50px;
+            font-size: 3vw;
             color: #fff;
             display: flex;
             align-items: center;
-            gap: 30px;
+            gap: 2vw;
             animation: slideLeft 0.8s ease-out;
         }
 
@@ -98,9 +106,9 @@
         }
 
         .solution-title {
-            font-size: 100px;
+            font-size: 6vw;
             color: #fff;
-            margin-bottom: 80px;
+            margin-bottom: 5vh;
             font-weight: 800;
             text-shadow: 0 5px 20px rgba(0,0,0,0.3);
         }
@@ -108,33 +116,34 @@
         .features-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 60px;
-            max-width: 1400px;
+            gap: 3vw;
+            max-width: 85%;
+            padding: 0 2vw;
         }
 
         .feature-card {
             background: rgba(255,255,255,0.15);
             backdrop-filter: blur(10px);
-            padding: 50px;
-            border-radius: 30px;
+            padding: 3vw;
+            border-radius: 2vw;
             border: 2px solid rgba(255,255,255,0.3);
             animation: scaleIn 0.6s ease-out;
         }
 
         .feature-icon {
-            font-size: 80px;
-            margin-bottom: 20px;
+            font-size: 5vw;
+            margin-bottom: 1vh;
         }
 
         .feature-title {
-            font-size: 45px;
+            font-size: 2.8vw;
             color: #fff;
             font-weight: 700;
-            margin-bottom: 15px;
+            margin-bottom: 1vh;
         }
 
         .feature-desc {
-            font-size: 32px;
+            font-size: 2vw;
             color: rgba(255,255,255,0.9);
         }
 
@@ -148,23 +157,26 @@
         }
 
         .bot-icon {
-            font-size: 200px;
-            margin-bottom: 40px;
+            font-size: 12vw;
+            margin-bottom: 3vh;
             animation: bounce 2s infinite;
         }
 
         .bot-title {
-            font-size: 90px;
+            font-size: 5.5vw;
             color: #fff;
             font-weight: 800;
-            margin-bottom: 40px;
+            margin-bottom: 3vh;
+            padding: 0 2vw;
         }
 
         .bot-features {
             display: flex;
-            gap: 80px;
+            gap: 5vw;
             justify-content: center;
-            margin-top: 60px;
+            margin-top: 4vh;
+            flex-wrap: wrap;
+            padding: 0 2vw;
         }
 
         .bot-feature {
@@ -172,7 +184,7 @@
         }
 
         .bot-feature-text {
-            font-size: 40px;
+            font-size: 2.5vw;
             color: #fff;
             font-weight: 600;
         }
@@ -183,36 +195,37 @@
         }
 
         .categories-title {
-            font-size: 80px;
+            font-size: 5vw;
             color: #fff;
-            margin-bottom: 80px;
+            margin-bottom: 5vh;
             font-weight: 800;
         }
 
         .categories-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 50px;
-            max-width: 1600px;
+            gap: 3vw;
+            max-width: 90%;
+            padding: 0 2vw;
         }
 
         .category-box {
             background: rgba(255,255,255,0.2);
             backdrop-filter: blur(10px);
-            padding: 60px 40px;
-            border-radius: 25px;
+            padding: 3vh 2vw;
+            border-radius: 1.5vw;
             text-align: center;
             border: 3px solid rgba(255,255,255,0.4);
             animation: fadeInUp 0.8s ease-out;
         }
 
         .category-emoji {
-            font-size: 90px;
-            margin-bottom: 25px;
+            font-size: 5vw;
+            margin-bottom: 1.5vh;
         }
 
         .category-name {
-            font-size: 42px;
+            font-size: 2.2vw;
             color: #fff;
             font-weight: 700;
         }
@@ -227,34 +240,35 @@
         }
 
         .cta-title {
-            font-size: 100px;
+            font-size: 6vw;
             color: #fff;
             font-weight: 900;
-            margin-bottom: 60px;
+            margin-bottom: 4vh;
             animation: pulse 2s infinite;
         }
 
         .cta-url {
-            font-size: 70px;
+            font-size: 3.5vw;
             color: #3b82f6;
             background: rgba(255,255,255,0.95);
-            padding: 40px 80px;
-            border-radius: 25px;
+            padding: 2.5vh 4vw;
+            border-radius: 1.5vw;
             font-weight: 700;
             box-shadow: 0 20px 60px rgba(59, 130, 246, 0.4);
-            margin-bottom: 60px;
+            margin-bottom: 4vh;
+            word-break: break-all;
         }
 
         .cta-arrow {
-            font-size: 120px;
+            font-size: 8vw;
             color: #3b82f6;
             animation: arrowBounce 1.5s infinite;
         }
 
         .cta-subtitle {
-            font-size: 50px;
+            font-size: 3vw;
             color: rgba(255,255,255,0.8);
-            margin-top: 40px;
+            margin-top: 3vh;
         }
 
         /* Animations */
