--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <div class="scene" id="scene6">
             <div class="cta-container">
                 <div class="cta-title">🚀 ACCÉDEZ GRATUITEMENT</div>
-                <div class="cta-url">eco-systeme-jercat-five.vercel.app</div>
+                <div class="cta-url">https://money-money-ruddy.vercel.app/</div>
                 <div class="cta-arrow">⬇️</div>
                 <div class="cta-subtitle">Lien dans la description</div>
             </div>
